--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@ant-design/charts": "^2.2.7",
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@antv/g2plot": "^2.4.33",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.3",
+    "@types/recharts": "^2.0.1",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
@@ -23,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.4",
     "zustand": "^5.0.3"
   },
